tests/NormalTests/paczka1/fuzzy1/95332714.err
Error in line 3: A585 A79 65,7
Error in line 11: mEkJHoRjeIV S204 59,0
Error in line 18: MvFZW S879 7,3
Error in line 27: yIpL39y8ff A585 98,6
Error in line 31: yIpL39y8ff S879 35,2
Error in line 33: b9KuKBY7H2 S879 77,0
